--- a/src/containers/box/style.css
+++ b/src/containers/box/style.css
@@ -73,7 +73,7 @@
   background-repeat: no-repeat;
   background-size: 50% 50%, 50% 50%;
   background-position: 0 0, 100% 0, 100% 100%, 0 100%;
-  background-image: linear-gradient(#03a9f4, #01579b), linear-gradient(#fff, #fff), linear-gradient(#03a9f4, #01579b), linear-gradient(#03a9f4, #01579b);
+  background-image: linear-gradient(#03a9f4, #01579b), linear-gradient(#01579b, #03a9f4), linear-gradient(#03a9f4, #01579b), linear-gradient(#03a9f4, #01579b);
   animation: rotate 4s linear infinite;
 }
 
