--- a/src/containers/features/style.css
+++ b/src/containers/features/style.css
@@ -1,9 +1,62 @@
 .card {
   position: relative;
-  box-shadow: 20px 20px rgba(0,0,0,.1);
-  transition: all .4s ease;
+  box-shadow: 20px 20px rgba(0, 0, 0, 0.1);
+  clip-path: polygon(
+    9% 0,
+    100% 0,
+    100% 20%,
+    100% 76%,
+    100% 100%,
+    9% 100%,
+    0% 80%,
+    0% 20%
+  );
+
+  transition: all 5s ease;
 }
 .card:hover {
-  border-radius: 0% 0% 50% 50% / 0% 0% 5% 5% ;
-  box-shadow: 10px 10px rgba(0,0,0,.1);
+  border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
+  clip-path: polygon(
+    1% 0,
+    100% 0,
+    100% 20%,
+    100% 76%,
+    100% 100%,
+    1% 100%,
+    0% 80%,
+    0% 20%
+  );
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.1);
+  transform: translateX(-9px);
+}
+.card-right {
+  position: relative;
+  box-shadow: 20px 20px rgba(0, 0, 0, 0.1);
+  clip-path: polygon(
+    0 0,
+    91% 0,
+    100% 20%,
+    100% 76%,
+    91% 100%,
+    0 100%,
+    0% 80%,
+    0% 20%
+  );
+
+  transition: all 5s ease;
+}
+.card-right:hover {
+  border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
+  clip-path: polygon(
+    1% 0,
+    100% 0,
+    100% 20%,
+    100% 76%,
+    100% 100%,
+    1% 100%,
+    0% 80%,
+    0% 20%
+  );
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.1);
+  transform: translateX(-9px);
 }
