--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  font-family:'Cabin', sans-serif. -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family:'Courier Prime', monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -14,7 +14,7 @@ body {
 
 
 code {
-  font-family:'Cabin', sans-serif, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family:'Courier Prime', monospace, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
